--- a/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
@@ -50,6 +50,9 @@ vmss create:
         enable_osimage_notification:
             rule_exclusions:
                 - option_length_too_long
+        disable_integrity_monitoring_autoupgrade:
+            rule_exclusions:
+                - option_length_too_long
 vmss update:
     parameters:
         enable_cross_zone_upgrade:
@@ -98,6 +101,9 @@ vm create:
             rule_exclusions:
                 - option_length_too_long
         os_disk_secure_vm_disk_encryption_set:
+            rule_exclusions:
+                - option_length_too_long
+        disable_integrity_monitoring_autoupgrade:
             rule_exclusions:
                 - option_length_too_long
 vm unmanaged-disk attach:
