--- a/.github/azure-client-tools-bot/config.yml
+++ b/.github/azure-client-tools-bot/config.yml
@@ -37,9 +37,9 @@ cli_common_issues:
   issues:
     - tag: unofficial_cli
       keywords:
-        - "2\\.0\\.80"
-        - "2\\.0\\.81"
-        - "2\\.18\\.0"
+        - "azure-cli 2\\.0\\.80"
+        - "azure-cli 2\\.0\\.81"
+        - "azure-cli 2\\.18\\.0"
         - "dist-packages"
       solution: |
         Hi @${author},
