--- a/src/azure-cli/requirements.py3.Linux.txt
+++ b/src/azure-cli/requirements.py3.Linux.txt
@@ -76,7 +76,7 @@ azure-mgmt-search==9.0.0
 azure-mgmt-security==3.0.0
 azure-mgmt-servicebus==8.2.0
 azure-mgmt-servicefabric==1.0.0
-azure-mgmt-servicefabricmanagedclusters==1.0.0
+azure-mgmt-servicefabricmanagedclusters==2.0.0b4
 azure-mgmt-servicelinker==1.2.0b1
 azure-mgmt-sql==4.0.0b10
 azure-mgmt-signalr==1.1.0
