{Security}: update module version
Change the security module from 3.0.0 to 5.0.0

Signed-off-by: Ihab Zhaika <ihabzhaika@microsoft.com>

--- a/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_pricings.yaml
+++ b/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_pricings.yaml
@@ -11,12 +11,12 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.5.0 azsdk-python-azure-mgmt-security/5.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings?api-version=2022-03-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings?api-version=2023-01-01
   response:
     body:
-      string: '{"value":[{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"subPlan":"P2","pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/SqlServers","name":"SqlServers","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/AppServices","name":"AppServices","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/StorageAccounts","name":"StorageAccounts","type":"Microsoft.Security/pricings","properties":{"subPlan":"PerTransaction","pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/SqlServerVirtualMachines","name":"SqlServerVirtualMachines","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/KubernetesService","name":"KubernetesService","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Free","freeTrialRemainingTime":"PT0S","deprecated":true,"replacedBy":["Containers"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/ContainerRegistry","name":"ContainerRegistry","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Free","freeTrialRemainingTime":"PT0S","deprecated":true,"replacedBy":["Containers"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/KeyVaults","name":"KeyVaults","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/Dns","name":"Dns","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/Arm","name":"Arm","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/OpenSourceRelationalDatabases","name":"OpenSourceRelationalDatabases","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/CosmosDbs","name":"CosmosDbs","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/Containers","name":"Containers","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/CloudPosture","name":"CloudPosture","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}}]}'
+      string: '{"value":[{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"subPlan":"P2","pricingTier":"Standard","freeTrialRemainingTime":"PT0S","extensions":[{"name":"MdeDesignatedSubscription","isEnabled":"False"},{"name":"AgentlessVmScanning","isEnabled":"True","additionalExtensionProperties":{"ExclusionTags":"[]"}}]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/SqlServers","name":"SqlServers","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/AppServices","name":"AppServices","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/StorageAccounts","name":"StorageAccounts","type":"Microsoft.Security/pricings","properties":{"subPlan":"PerTransaction","pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/SqlServerVirtualMachines","name":"SqlServerVirtualMachines","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/KubernetesService","name":"KubernetesService","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Free","freeTrialRemainingTime":"PT0S","deprecated":true,"replacedBy":["Containers"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/ContainerRegistry","name":"ContainerRegistry","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Free","freeTrialRemainingTime":"PT0S","deprecated":true,"replacedBy":["Containers"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/KeyVaults","name":"KeyVaults","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/Dns","name":"Dns","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/Arm","name":"Arm","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/OpenSourceRelationalDatabases","name":"OpenSourceRelationalDatabases","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/CosmosDbs","name":"CosmosDbs","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/Containers","name":"Containers","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/CloudPosture","name":"CloudPosture","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}}]}'
     headers:
       api-supported-versions:
       - '1.0'
@@ -65,9 +65,9 @@ interactions:
       ParameterSetName:
       - -n --tier
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.5.0 azsdk-python-azure-mgmt-security/5.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2022-03-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2023-01-01
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Free","freeTrialRemainingTime":"PT0S"}}'
@@ -115,9 +115,9 @@ interactions:
       ParameterSetName:
       - -n
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.5.0 azsdk-python-azure-mgmt-security/5.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2022-03-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2023-01-01
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"pricingTier":"Free","freeTrialRemainingTime":"PT0S"}}'
@@ -169,12 +169,12 @@ interactions:
       ParameterSetName:
       - -n --tier
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.5.0 azsdk-python-azure-mgmt-security/5.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2022-03-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2023-01-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"subPlan":"P2","pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"subPlan":"P2","pricingTier":"Standard","freeTrialRemainingTime":"PT0S","extensions":[{"name":"MdeDesignatedSubscription","isEnabled":"False"},{"name":"AgentlessVmScanning","isEnabled":"True","additionalExtensionProperties":{"ExclusionTags":"[]"}}]}}'
     headers:
       api-supported-versions:
       - '1.0'
@@ -219,12 +219,12 @@ interactions:
       ParameterSetName:
       - -n
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.5.0 azsdk-python-azure-mgmt-security/5.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2022-03-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines?api-version=2023-01-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"subPlan":"P2","pricingTier":"Standard","freeTrialRemainingTime":"PT0S"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/pricings/VirtualMachines","name":"VirtualMachines","type":"Microsoft.Security/pricings","properties":{"subPlan":"P2","pricingTier":"Standard","freeTrialRemainingTime":"PT0S","extensions":[{"name":"MdeDesignatedSubscription","isEnabled":"False"},{"name":"AgentlessVmScanning","isEnabled":"True","additionalExtensionProperties":{"ExclusionTags":"[]"}}]}}'
     headers:
       api-supported-versions:
       - '1.0'
