Add new command `sig image-version undelete` to support restore soft deleted image

--- a/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
@@ -164,4 +164,9 @@ sig image-version update:
         allow_replicated_location_deletion:
             rule_exclusions:
             - option_length_too_long
+sig image-version undelete:
+    parameters:
+        allow_replicated_location_deletion:
+            rule_exclusions:
+            - option_length_too_long
 ...
